test/fail/actor-reference-unit.mo
// actor references

let _ = actor "ic:C0FEFED00D41" : ();  // must be actor type
